--- a/src/Weather.css
+++ b/src/Weather.css
@@ -21,18 +21,15 @@
   line-height: 19px;
   list-style: none;
 }
-.Weather img {
-  height: 64px;
-  width: 64px;
+.Weather canvas {
   margin-right: 10px;
   display: inline-block;
-  vertical-align:top;
 }
 .Weather .temperature {
   font-weight: bold;
   color: #212121;
-  font-size: 64px;
-  line-height: 64px;
+  font-size: 72px;
+  line-height: 72px;
   font-weight: 400;
   margin-left: 10px;
 }
