--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,14 +1,11 @@
 .Weather {
-  font-family: arial, sans-serif;
-  border: 1px solid #dadde1;
-  padding: 16px;
-  border-radius: 4px;
-  color: #878787;
+  font-family: 'Arial Narrow', sans-serif;
+  color: #333333;
 }
 .Weather h1 {
-  font-size: 24px;
-  font-weight: 100;
-  margin: 20px 0 0 0;
+  font-size: 32px;
+  font-weight: 800;
+  margin: 25px 0 15px 0;
   line-height: 29px;
 }
 .Weather ul {
@@ -26,11 +23,10 @@
   display: inline-block;
 }
 .Weather .temperature {
-  font-weight: bold;
   color: #212121;
   font-size: 72px;
   line-height: 72px;
-  font-weight: 400;
+  font-weight: 600;
   margin-left: 10px;
 }
 .Weather .unit {
@@ -41,4 +37,4 @@
   line-height: 1;
   top: -34px;
   margin-left: 5px;
-}
+} 
